# package-proxy

./: .gitignore  CONCLUSIONS.MD  MANIFEST.in  README.md  package_proxy_bootstrap.pth  pyproject.toml
data/: extract_sys_modules.sh
src/: _debug.py
src/package_proxy/: __init__.py  _local_api.py  api.py  client.py  finder.py
src/package_proxy/_local/: api.py  logger.py
study/: type_test_1.py  type_test_2.py  type_test_3.py
testbed/client/A/: mod_A1.py
testbed/server/: _debug.py
testbed/server/B/BB/: mod_BB1.py
testbed/server/C/: __init__.py  mod_C1.py
tests/: _adhoc.py  _api.py  _debug.py  _sim_user.py  conftest.py  test_import.py  test_package_proxy.py  util.py
